<resources>
    <string name="app_name">MomentousMovies</string>
    <string name="txt_app_name">Momentous Movies</string>
    <string name="image_movie_content_description">Image of movie</string>
    <string name="txt_movie_item">Movie title</string>
    <string name="txt_author_name">Author Name</string>
    <string name="txt_author_value">Author Value</string>
    <string name="txt_the_best">The best</string>
    <string name="movies_in_your">Movies in your</string>
    <string name="txt_hand">Hand!</string>
    <string name="no_results_found">No results found</string>
    <string name="failed_get_data">Failed to get data</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_detail_image_content_description">Image of Movie</string>
    <string name="txt_overview">Overview</string>
    <string name="reviews">Reviews</string>
    <string name="failed_get_token">Failed to get token</string>
    <string name="empty_reviews">No review records</string>
    <string name="txt_casting">CASTING</string>
    <string name="what_we_watch_today">What we watch today?</string>
    <string name="txt_search_action">Search</string>
    <string name="txt_sort_action">Sort</string>
    <string name="txt_filter">Filtrar por</string>
    <string name="txt_popular_sort">Popular</string>
    <string name="txt_name_sort">Title</string>
    <string name="txt_recent_sort">Recent</string>
    <string name="title_popular_movies">Popular Movies</string>
    <string name="failure_network_connection">Network Error</string>
    <string name="failure_unavailable">Unknown Error</string>
</resources>
