<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/txt_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:text="@string/txt_filter"
            android:textColor="@color/black_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <TextView
            android:id="@+id/txtByPopular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_star"
            android:drawableTint="@color/grey_icon"
            android:padding="8dp"
            android:text="@string/txt_popular_sort"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_dialog_title" />


        <TextView
            android:id="@+id/txtByName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_name"
            android:drawableTint="@color/grey_icon"
            android:padding="8dp"
            android:text="@string/txt_name_sort"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtByPopular" />


        <TextView
            android:id="@+id/txtByRecent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_recent"
            android:drawableTint="@color/grey_icon"
            android:padding="8dp"
            android:text="@string/txt_recent_sort"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtByName" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>